results/SpecGenBench/2-shot/log-TransposeMatrix-2023_11_28_03_24_31.txt
public class TransposeMatrix {
 
       //@ requires matrix != null && matrix.length > 0 && matrix[0].length > 0;
       //@ ensures \result != null && \result.length == matrix[0].length && \result[0].length == matrix.length;
       public int[][] transposeMat(int[][] matrix)
       {
          int m, n, p, q;
          m = matrix.length;
          n = matrix[0].length;
          int[][] transpose = new int[n][m];

          for (int c = 0; c < n; c++) {

              for (int d = 0; d < m; d++) {
                  transpose[c][d] = matrix[d][c];
              }

          }
          return transpose;
       }
}
/home/max/Documents/JMLGPT/tmp/TransposeMatrix.java:15: error: A catastrophic JML internal error occurred.  Please report the bug with as much information as you can.
                  transpose[c][d] = matrix[d][c];
                            ^
  Reason: Double rewriting of ident: c c_438_438___36 c_438_452___39
1 error

